--- a/app/managepo/webapp/index.html
+++ b/app/managepo/webapp/index.html
@@ -31,6 +31,6 @@
         data-settings='{"id" : "bosch.po.managepo"}'
         data-handle-validation="true"
     ></div>
-    <!-- <div></div> -->
+    <p>BGSW</p>
 </body>
 </html>
